--- a/src/pages/servicios.astro
+++ b/src/pages/servicios.astro
@@ -160,8 +160,7 @@ const metadata = {
         Corrección de Sonrisa Moderna
       </h3>
       <p class="text-muted">
-        Los alineadores transparentes ofrecen una forma cómoda y discreta de enderezar sus dientes. Nivel II certificada
-        en terapia con alineadores, puedo corregir una amplia gama de problemas de alineación.
+        Los alineadores transparentes ofrecen una forma cómoda y discreta de enderezar sus dientes. Puedo corregir una amplia gama de problemas de alineación.
       </p>
     </Fragment>
 
