--- a/src/assets/styles/tailwind.css
+++ b/src/assets/styles/tailwind.css
@@ -121,7 +121,7 @@
 /* Underline for desktop horizontal nav */
 @media (min-width: 768px) {
   nav .aw-link-active::after {
-    content: '';
+    content: "";
     position: absolute;
     bottom: 0.5rem;
     left: 1rem;
