--- a/src/components/widgets/Hero.astro
+++ b/src/components/widgets/Hero.astro
@@ -81,12 +81,13 @@ const {
                 <Fragment set:html={image} />
               ) : (
                 <Image
-                  class="mx-auto rounded-md w-full"
+                  class="mx-auto rounded-md w-full md:w-full h-[500px] md:h-auto object-cover"
                   widths={[400, 768, 1024, 2040]}
                   sizes="(max-width: 767px) 400px, (max-width: 1023px) 768px, (max-width: 2039px) 1024px, 2040px"
                   loading="eager"
                   width={1024}
                   height={576}
+                  layout="cover"
                   {...image}
                 />
               )}
