--- a/src/pages/en/contact.astro
+++ b/src/pages/en/contact.astro
@@ -72,7 +72,7 @@ const metadata = {
       },
       {
         title: 'Location',
-        description: 'El Palo, Málaga, Spain\nClinic open select weekends',
+        description: 'Av. Juan Sebastián Elcano, 191, 2ª planta, 29017 Málaga, Spain\nClinic open select weekends',
         icon: 'tabler:map-pin',
       },
     ]}
@@ -82,7 +82,7 @@ const metadata = {
   <section class="px-4 py-16 mx-auto max-w-7xl sm:px-6 lg:px-8">
     <div class="text-center mb-8">
       <h2 class="text-3xl font-bold mb-4">Our Location</h2>
-      <p class="text-muted">Dr. Eugenia Vila Dental Clinic - El Palo, Málaga</p>
+      <p class="text-muted">Dr. Eugenia Vila Dental Clinic<br>Av. Juan Sebastián Elcano, 191, 2ª planta, 29017 Málaga, Spain</p>
     </div>
     <div class="rounded-lg overflow-hidden shadow-lg">
       <iframe
