--- a/src/pages/en/gallery.astro
+++ b/src/pages/en/gallery.astro
@@ -10,7 +10,8 @@ import case2After from '~/assets/images/gallery/2_after.png';
 
 const metadata = {
   title: 'Case Gallery - Dr. Eugenia Vila',
-  description: 'See real transformations from our patients. Cases of dental implants, aligners and cosmetic dentistry with impressive results.',
+  description:
+    'See real transformations from our patients. Cases of dental implants, aligners and cosmetic dentistry with impressive results.',
 };
 
 // Gallery cases
@@ -145,4 +146,3 @@ const cases = [
     </Fragment>
   </CallToAction>
 </Layout>
-
